History:

<see Git checkin messages for history>

dev     2017/xx/xx
      - add the 'Say Thanks' button
      - doc: several fixes (fix #22)
      - tests: a lot of tests added for better coverage
      - MSS: possibility to use custom class to handle screen shot data
      - Mac: handle screenshot's width not divisible by 16 (fix #14, #19, #21)
      - Linux: handle bad display value

3.0.1   2017/07/06
      - fix examples links

3.0.0   2017/07/06
      - big refactor, introducing the ScreenShot class
      - add Numpy array interface support
      - examples: add OpenCV/Numpy, PIL pixels, FPS

2.0.22  2017/04/29
      - new contributors: David Becker, redodo
      - add an example to capture only a part of the screen
      - better use of exception mechanism
      - Linux: use of hasattr to prevent Exception on early exit
      - Mac: take into account extra black pixels added when screen with is not divisible by 16 (fix #14)

2.0.18  2016/12/03
      - change license to MIT
      - new contributor: Jochen 'cycomanic' Schroeder
      - add type hints
      - add documentation (fix #10)
      - add tests and use Travis CI (fix #9)
      - remove unused code (reported by Vulture)
      - Linux: remove MSS library
      - Linux: insanely fast using only ctypes
      - Linux: skip unused monitors
      - Linux: use errcheck instead of deprecated restype with callable (fix #11)
      - Linux: fix security issue (reported by Bandit)

2.0.0   2016/06/04
      - split the module into several files
      - add issue and pull request templates
      - a lot of code refactor and optimizations
      - MSS: rename save_img() to to_png()
      - MSS: save(): replace 'screen' argument by 'mon'
      - Mac: get rid of the PyObjc module, 100% ctypes
      - Linux: prevent segfault when DISPLAY is set but no X server started
      - Linux: prevent segfault when Xrandr is not loaded
      - Linux: get_pixels() insanely fast, use of MSS library (C code)